k8s/dev/service/2.deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api-endereco
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-endereco
        service: api-endereco
    spec:
      containers:
      - name: api-endereco
        image: fernandoe/fe-endereco-api:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
