k8s/dev/service/5.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api-endereco.dev.fernandoe.com
      http:
        paths:
          - backend:
              serviceName: api-endereco
              servicePort: 80
  tls:
    - hosts:
        - api-endereco.dev.fernandoe.com
      secretName: api-endereco-dev-fernandoe-com-tls
